--- a/MVT/plantillas/template2.html
+++ b/MVT/plantillas/template2.html
@@ -10,7 +10,7 @@
     <title>Document</title>
 </head>
 <body style="font-family:verdana;">
-    <h1>PRIMER PAGINA WE</h1>
+    <h1>PRIMER PAGINA WEB</h1>
     <p>Parientes de primer grado de {{miNombre}}({{miEdad}})</p>
     <p style="font-size:150%;"><b>Lista de Invitados</b></p>
 
