--- a/MVT/plantillas/index.html
+++ b/MVT/plantillas/index.html
@@ -25,7 +25,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/fam">Familia</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Services</a></li>
                     </ul>
@@ -38,7 +38,7 @@
                 <div class="row gx-5 justify-content-center">
                     <div class="col-lg-6">
                         <div class="text-center my-5">
-                            <h1 class="display-5 fw-bolder text-white mb-2">Mira Pipi lo que aprendi a hacer</h1>
+                            <h1 class="display-5 fw-bolder text-white mb-2">Present your business in a whole new way</h1>
                             <p class="lead text-white-50 mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit!</p>
                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
                                 <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">Get Started</a>
@@ -240,7 +240,7 @@
             </div>
         </section>
         <!-- Testimonials section-->
-        <section class="py-5 border-bottom">
+        <!-- <section class="py-5 border-bottom">
             <div class="container px-5 my-5 px-5">
                 <div class="text-center mb-5">
                     <h2 class="fw-bolder">Customer testimonials</h2>
@@ -275,7 +275,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> 
         <!-- Contact section-->
         <section class="bg-light py-5">
             <div class="container px-5 my-5 px-5">
