--- a/MVT/plantillas/template2.html
+++ b/MVT/plantillas/template2.html
@@ -11,31 +11,30 @@
 </head>
 <body style="font-family:verdana;">
     <h1>PRIMER PAGINA WEB </h1>
-    <p>Parientes de primer grado de {{miNombre}}({{miEdad}})</p>
-    <p style="font-size:150%;"><b>Lista de Invitados</b></p>
+    <p style="font-size:135%">Parientes de primer grado de {{miNombre}}({{miEdad}})</p>
 
-<table style="width:100%">
-    <tr style="font-size:125%">
-        <td><b>Nombre</b></td>
-        <td><b>Edad</b></td>
-        <td><b>Fecha de Nacimiento</b></td>
-    </tr>
-    <tr>
-        <td>{{l_nombres.0}}</td>
-        <td>{{l_edad.0}}</td>
-        <td>{{l_fecha.0}}</td>
-    </tr>
-    <tr>
-        <td>{{l_nombres.1}}</td>
-        <td>{{l_edad.1}}</td>
-        <td>{{l_fecha.1}}</td>
-    </tr>
-    <tr>
-        <td>{{l_nombres.2}}</td>
-        <td>{{l_edad.2}}</td>
-        <td>{{l_fecha.2}}</td>
-    </tr>
-</table>
+    <table style="width:100%">
+        <tr style="font-size:125%">
+            <td><b>Nombre</b></td>
+            <td><b>Edad</b></td>
+            <td><b>Fecha de Nacimiento</b></td>
+        </tr>
+        <tr>
+            <td>{{l_nombres.0}}</td>
+            <td>{{l_edad.0}}</td>
+            <td>{{l_fecha.0}}</td>
+        </tr>
+        <tr>
+            <td>{{l_nombres.1}}</td>
+            <td>{{l_edad.1}}</td>
+            <td>{{l_fecha.1}}</td>
+        </tr>
+        <tr>
+            <td>{{l_nombres.2}}</td>
+            <td>{{l_edad.2}}</td>
+            <td>{{l_fecha.2}}</td>
+        </tr>
+    </table>
 
 </body>
 </html>
