--- a/MVT/plantillas/index.html
+++ b/MVT/plantillas/index.html
@@ -24,9 +24,9 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/fam">Familia</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'Inicio' %}">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'Familia' %}">Familia</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'CrearFamiliar' %}">CrearFamiliar</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Services</a></li>
                     </ul>
                 </div>
@@ -45,6 +45,11 @@
                 </div>
             </div>
         </header>
+    <br>
+    {% block Contenido %}
+
+    {% endblock %}
+    <br>
         <!-- Footer-->
         <footer class="py-5 bg-dark">
             <div class="container px-5"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
