--- a/MVT/plantillas/template2.html
+++ b/MVT/plantillas/template2.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block COntenido %}
+{% block Contenido %}
 
     <table style="width:100%">
         <tr style="font-size:125%">
@@ -16,7 +16,7 @@
             <td>{{fam.edad}}</td>
             <td>{{fam.FechDeNac}}</td>
         </tr>
-    {% endfor %}
+        {% endfor %}
     </table>
 
 
